--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 
 
     <script src="https://use.fontawesome.com/c79e2f3459.js"></script>
-    <script src="/index.js"></script>
+    <script src="./index.js"></script>
 
 </body>
 
